[package]
name = "chipotle8-server"
version = "0.1.0"
authors = ["Melvillian <melvillevt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chipotle8 = { git = "https://github.com/Melvillian/chipotle8" }
chipotle8 = { path = "../chipotle8" }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
pretty_env_logger = "0.4.0"
futures = "0.3"
